--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "jsonwebtoken": "^9.0.2",
     "migrate-mongo": "^11.0.0",
     "mongoose": "^8.5.4",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
